--- a/inventory.ini
+++ b/inventory.ini
@@ -1,6 +1,6 @@
 [webservers]
-server1 ansible_host=51.250.111.14
-server2 ansible_host=51.250.10.42
+server1 ansible_host=51.250.85.87
+; server2 ansible_host=51.250.10.42
         
 [webservers:vars]
 ansible_user=sam
