Step 5 (fix CI)

--- a/requirements.yml
+++ b/requirements.yml
@@ -1,4 +1,8 @@
-- src: geerlingguy.pip
-  version: 3.1.0
-- src: geerlingguy.docker
-  version: 7.4.4
+roles:
+  - src: geerlingguy.pip
+    version: 3.1.0
+  - src: geerlingguy.docker
+    version: 7.4.4
+collections:
+  - name: community.docker
+    version: 4.1.0
