--- a/requirements.yml
+++ b/requirements.yml
@@ -4,5 +4,5 @@ roles:
   - src: geerlingguy.docker
     version: 7.4.4
 collections:
-  - name: community.docker
-    version: 4.1.0
+  - name: datadog.dd
+    version: 5.8.0
